Fix T70039, T68707: issues when opening .blend file from Finder on macOS

* Missing close dialog displayed to warn about unsaved changes.
* No reaction when the file was opened on a different desktop.

Differential Revision: https://developer.blender.org/D6765